syntax = "proto3";

option go_package = ".;protobuf";

package protobuf;

// Structure for site navigation's item.
message NavigationItem {
  string id = 1;
  string name = 2;
  string link = 3;
  repeated NavigationItem items = 4;
}

message GetNavigationItemsRequest {}
message GetNavigationItemsResponse {
  repeated NavigationItem navigation_items = 1;
}

service Catalog {
  rpc GetNavigationItems(GetNavigationItemsRequest) returns (GetNavigationItemsResponse) {}
}
